// storage gateway rpc request/response

syntax = "proto3";

option objc_class_prefix = "DRS"; 
package huawei.proto;

message Journal {
	// journal file name
	string name = 1; 
	enum JOURNAL_STATUS {
		CREATED = 0; // journal file is created but not used yet
		OPENED = 1;  // journal file is opened for producer to write
		SEALED = 2;  // read only for cosumers
	}
	JOURNAL_STATUS status = 2 ;
	//max size of journal file 
	uint64 size = 3; 
	 // last write position of journal file
	uint64 pos = 4 ;
	// the file id for write/read
	int32 fid = 5 ;   
}

message JournalArray {
// count indicates how many journal files are in journals array
	int32 count = 1;
	repeated Journal journals = 2;
}

enum RESULT {
    OK = 0;
    INTERNAL_ERROR = 1;
}
enum CONSUMER_TYPE {
    REPLAYER = 0;
    REPLICATER = 1;
}